--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 div
 {
-    border: 1px solid rgb(230, 230, 230);
+    border: 1px solid rgb(217, 153, 153);
 }
 
 body
@@ -122,8 +122,7 @@ button
 {
     display: flex;
     justify-content: center;
-    background-color: white;
-    
+    background-color: white;    
 }
 
 
@@ -134,8 +133,8 @@ button
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: 120px;
+    margin-top: 65px;
+    margin-bottom: 140px;
     gap: 50px;    
 }
 
@@ -166,12 +165,42 @@ button
 
 .card-text
 {
-    color: #1f2937;
-    
+    color: #1f2937;    
 }
 
 /*------------------- CONTENT 2 -------------------- */
 
+.content2
+{
+    display: flex;
+    justify-content: center;
+    background-color: #e5e7eb;
+}
+
+.content2-container
+{
+    min-width: 790px;
+    width: 50%;    
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 120px;
+    margin-bottom: 100px;
+    gap: 5px;
+}
+
+.quote
+{
+    color: #1F2937;
+    font-style:italic;    
+    font-size: 40px;
+}
+
+.quote-author
+{
+    color: #1F2937;
+    font-weight: bolder;
+}
 
 
 
